[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/app/retrohub_logo_1024px_draft.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/default_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/config/AboutSettings.gd" type="Script" id=3]
[ext_resource path="res://assets/copyright/godot.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/default_medium.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/copyright/ffmpeg.png" type="Texture" id=6]
[ext_resource path="res://assets/copyright/controller_icons.png" type="Texture" id=7]
[ext_resource path="res://scenes/config/Licenses.gd" type="Script" id=8]
[ext_resource path="res://resources/fonts/default_italic.tres" type="DynamicFont" id=9]

[node name="AboutSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="About" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About"]
margin_right = 1016.0
margin_bottom = 634.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/About/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 128.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/About/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_top = 12.0
margin_right = 351.0
margin_bottom = 115.0
size_flags_vertical = 4

[node name="Name" type="Label" parent="TabContainer/About/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 219.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "RetroHub"

[node name="Version" type="Label" parent="TabContainer/About/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 71.0
margin_right = 219.0
margin_bottom = 85.0
text = "Version %s"

[node name="EngineVersion" type="Label" parent="TabContainer/About/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 89.0
margin_right = 219.0
margin_bottom = 103.0
text = "Engine version %s"

[node name="HFlowContainer" type="VBoxContainer" parent="TabContainer/About/VBoxContainer/HBoxContainer"]
margin_left = 854.0
margin_right = 1004.0
margin_bottom = 128.0
size_flags_horizontal = 10

[node name="OpenWebsiteButton" type="Button" parent="TabContainer/About/VBoxContainer/HBoxContainer/HFlowContainer"]
margin_right = 150.0
margin_bottom = 20.0
text = "Open project website"

[node name="OpenIssuesButton" type="Button" parent="TabContainer/About/VBoxContainer/HBoxContainer/HFlowContainer"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 44.0
text = "Report issues"

[node name="HSeparator" type="HSeparator" parent="TabContainer/About/VBoxContainer"]
margin_top = 132.0
margin_right = 1004.0
margin_bottom = 136.0

[node name="Text" type="RichTextLabel" parent="TabContainer/About/VBoxContainer"]
margin_top = 140.0
margin_right = 1004.0
margin_bottom = 200.0
bbcode_enabled = true
bbcode_text = "Copyright (C) 2021-present Ricardo Subtil ([url=https://github.com/rsubtil/]@rsubtil[/url])
Icon designed by [url=https://github.com/lynnpepin]@lynnpepin[/url], distributed under [url=ccby40]CC-BY-4.0[/url]
RetroHub is distributed under a [url=gpl3retrohub]GPL3[/url] license with an exception concerning user themes.
RetroHub uses various libraries and plugins, detailed below:"
text = "Copyright (C) 2021-present Ricardo Subtil (@rsubtil)
Icon designed by @lynnpepin, distributed under CC-BY-4.0
RetroHub is distributed under a GPL3 license with an exception concerning user themes.
RetroHub uses various libraries and plugins, detailed below:"
fit_content_height = true

[node name="HSeparator2" type="HSeparator" parent="TabContainer/About/VBoxContainer"]
margin_top = 204.0
margin_right = 1004.0
margin_bottom = 208.0

[node name="Godot" type="VBoxContainer" parent="TabContainer/About/VBoxContainer"]
margin_top = 212.0
margin_right = 1004.0
margin_bottom = 314.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/About/VBoxContainer/Godot"]
margin_right = 1004.0
margin_bottom = 76.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/About/VBoxContainer/Godot/HBoxContainer"]
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About/VBoxContainer/Godot/HBoxContainer"]
margin_left = 80.0
margin_right = 1004.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/About/VBoxContainer/Godot/HBoxContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "Godot Engine"

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/About/VBoxContainer/Godot/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 924.0
margin_bottom = 76.0
bbcode_enabled = true
bbcode_text = "Website: [url=https://godotengine.org/]https://godotengine.org/[/url]
License: [url=mit]MIT[/url]"
text = "Website: https://godotengine.org/
License: MIT"
fit_content_height = true

[node name="Label" type="Label" parent="TabContainer/About/VBoxContainer/Godot"]
margin_top = 80.0
margin_right = 1004.0
margin_bottom = 94.0
text = "Main game engine behind RetroHub"

[node name="HSeparator" type="HSeparator" parent="TabContainer/About/VBoxContainer/Godot"]
margin_top = 98.0
margin_right = 1004.0
margin_bottom = 102.0

[node name="FFMPEG" type="VBoxContainer" parent="TabContainer/About/VBoxContainer"]
margin_top = 318.0
margin_right = 1004.0
margin_bottom = 420.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/About/VBoxContainer/FFMPEG"]
margin_right = 1004.0
margin_bottom = 76.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/About/VBoxContainer/FFMPEG/HBoxContainer"]
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About/VBoxContainer/FFMPEG/HBoxContainer"]
margin_left = 80.0
margin_right = 1004.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/About/VBoxContainer/FFMPEG/HBoxContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "FFmpeg"

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/About/VBoxContainer/FFMPEG/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 924.0
margin_bottom = 76.0
bbcode_enabled = true
bbcode_text = "Website: [url=https://ffmpeg.org/]https://ffmpeg.org/[/url]
License: [url=gpl3]GPL3[/url]"
text = "Website: https://ffmpeg.org/
License: GPL3"
fit_content_height = true

[node name="Label" type="Label" parent="TabContainer/About/VBoxContainer/FFMPEG"]
margin_top = 80.0
margin_right = 1004.0
margin_bottom = 94.0
text = "Video/audio playback"

[node name="HSeparator" type="HSeparator" parent="TabContainer/About/VBoxContainer/FFMPEG"]
margin_top = 98.0
margin_right = 1004.0
margin_bottom = 102.0

[node name="godot-videodecoder" type="VBoxContainer" parent="TabContainer/About/VBoxContainer"]
margin_top = 424.0
margin_right = 1004.0
margin_bottom = 527.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/About/VBoxContainer/godot-videodecoder"]
margin_right = 1004.0
margin_bottom = 76.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/About/VBoxContainer/godot-videodecoder/HBoxContainer"]
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
size_flags_vertical = 3
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About/VBoxContainer/godot-videodecoder/HBoxContainer"]
margin_left = 80.0
margin_right = 1004.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/About/VBoxContainer/godot-videodecoder/HBoxContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "godot-videodecoder"

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/About/VBoxContainer/godot-videodecoder/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 924.0
margin_bottom = 76.0
bbcode_enabled = true
bbcode_text = "Website: [url=https://github.com/kidrigger/godot-videodecoder]https://github.com/kidrigger/godot-videodecoder[/url]
License: [url=mit]MIT[/url]"
text = "Website: https://github.com/kidrigger/godot-videodecoder
License: MIT"
fit_content_height = true

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/About/VBoxContainer/godot-videodecoder"]
margin_top = 80.0
margin_right = 1004.0
margin_bottom = 95.0
bbcode_enabled = true
bbcode_text = "Addon for integrating FFMPEG with Godot. Custom fork is used at [url=https://github.com/retrohub-org/godot-videodecoder]https://github.com/retrohub-org/godot-videodecoder[url]"
text = "Addon for integrating FFMPEG with Godot. Custom fork is used at https://github.com/retrohub-org/godot-videodecoder"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="TabContainer/About/VBoxContainer/godot-videodecoder"]
margin_top = 99.0
margin_right = 1004.0
margin_bottom = 103.0

[node name="ControllerIcons" type="VBoxContainer" parent="TabContainer/About/VBoxContainer"]
margin_top = 531.0
margin_right = 1004.0
margin_bottom = 634.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/About/VBoxContainer/ControllerIcons"]
margin_right = 1004.0
margin_bottom = 76.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/About/VBoxContainer/ControllerIcons/HBoxContainer"]
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About/VBoxContainer/ControllerIcons/HBoxContainer"]
margin_left = 80.0
margin_right = 1004.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/About/VBoxContainer/ControllerIcons/HBoxContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "Controller Icons"

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/About/VBoxContainer/ControllerIcons/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 924.0
margin_bottom = 76.0
bbcode_enabled = true
bbcode_text = "Website: [url=https://github.com/rsubtil/controller_icons]https://github.com/rsubtil/controller_icons[/url]
License: [url=mit]MIT[/url] (Icons: [url=cc0]CC0[/url])"
text = "Website: https://github.com/rsubtil/controller_icons
License: MIT (Icons: CC0)"
fit_content_height = true

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/About/VBoxContainer/ControllerIcons"]
margin_top = 80.0
margin_right = 1004.0
margin_bottom = 95.0
bbcode_enabled = true
bbcode_text = "Addon for automatic keyboard/controller icons."
text = "Addon for automatic keyboard/controller icons."
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="TabContainer/About/VBoxContainer/ControllerIcons"]
margin_top = 99.0
margin_right = 1004.0
margin_bottom = 103.0

[node name="Licenses" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Licenses"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Names" type="Tree" parent="TabContainer/Licenses/HBoxContainer"]
unique_name_in_owner = true
margin_right = 200.0
margin_bottom = 564.0
rect_min_size = Vector2( 200, 0 )
hide_root = true

[node name="Content" type="TextEdit" parent="TabContainer/Licenses/HBoxContainer"]
unique_name_in_owner = true
margin_left = 204.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
smooth_scrolling = true
wrap_enabled = true

[node name="Label" type="Label" parent="TabContainer/Licenses"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "To be implemented"
align = 1
valign = 1

[connection signal="pressed" from="TabContainer/About/VBoxContainer/HBoxContainer/HFlowContainer/OpenWebsiteButton" to="." method="_on_OpenWebsiteButton_pressed"]
[connection signal="pressed" from="TabContainer/About/VBoxContainer/HBoxContainer/HFlowContainer/OpenIssuesButton" to="." method="_on_OpenIssuesButton_pressed"]
[connection signal="meta_clicked" from="TabContainer/About/VBoxContainer/Text" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="TabContainer/About/VBoxContainer/Godot/HBoxContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="TabContainer/About/VBoxContainer/FFMPEG/HBoxContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="TabContainer/About/VBoxContainer/godot-videodecoder/HBoxContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="TabContainer/About/VBoxContainer/godot-videodecoder/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="TabContainer/About/VBoxContainer/ControllerIcons/HBoxContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="item_selected" from="TabContainer/Licenses/HBoxContainer/Names" to="TabContainer/Licenses" method="_on_Names_item_selected"]
